--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test-coverage-report": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "autotest": "npm run test --watchAll"
   }
 }
